--- a/media/media.css
+++ b/media/media.css
@@ -313,7 +313,7 @@
     text-align: center;
   }
   .main-menu__content {
-    height: 290px;
+    height: 35add0px;
   }
   .footer__nav {
     flex-direction: column;
