--- a/style/style.css
+++ b/style/style.css
@@ -327,6 +327,9 @@ li {
 .main-menu__card:nth-of-type(3) {
   margin-bottom: 50px;
 }
+.main-menu__card {
+  width: 32%;
+}
 
 /* .main-menu__card:nth-of-type(odd){
 background: white;
